# auto_clean_bot

./: .clang-format  .gitignore  README.md  消息说明.md
scripts/: build_control.bash  build_control_test.bash  build_gmsl_ros2.bash  build_lane_detection.sh  build_lidar.bash  build_ndt_mapping.bash  build_obstacles_detection_lidar.bash  build_rtk.bash  create_pkg.bash  enable_trtexec.bash  run_control.bash  run_control_test_publisher.bash  run_control_test_subscriber.bash  run_gmsl_miivii.bash  run_gmsl_ros2.bash  run_lane_detection.bash  run_ndt_mapping.bash  run_obstacles_detection_lidar.bash  run_rtk.bash
src/bot_msg/: CMakeLists.txt  package.xml
src/bot_msg/msg/: ADCTrajectory.msg  ChassisInfo.msg  ControlCmd.msg  LaneInfo.msg  Lanes.msg  LocalizationInfo.msg  ObstacleInfo.msg  Obstacles.msg  TrajectoryPoint.msg
src/calibration/: CMakeLists.txt  package.xml
src/canbus/: CMakeLists.txt  package.xml
src/canbus/config/: canbus_conf_dev.yaml
src/canbus/include/: can_device.hpp  canprotocol.hpp
src/canbus/launch/: canbus.launch.py
src/canbus/src/: can_device.cpp  can_driver.cpp
src/control/: CMakeLists.txt  package.xml
src/control/include/control/: control_node.h
src/control/launch/: control.launch.py
src/control/src/: control_node.cpp
src/control_test/: CMakeLists.txt  package.xml
src/control_test/config/: config.yaml
src/control_test/include/control_test/: control_test_node.h
src/control_test/include/logdata/: control_test_node.h
src/control_test/launch/: control_test.launch.py
src/control_test/src/: control_test_node.cpp
src/drivers/gmsl_ros2/launch/: gmsl_composition_launch.py  gmsl_launch.py  multi_camera_launch.py
src/drivers/inno_lidar_ros/src/inno_sdk/: README.md  README.md_SDKdeploy
src/drivers/inno_lidar_ros/src/inno_sdk/docs/: py_module.md
src/drivers/inno_lidar_ros/src/inno_sdk/src/utils/: getopt_windows.h
src/drivers/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/lib/: libinnolidarsdkclient.so.0.0.0  libinnolidarsdkcommon.so.0.0.0  libinnolidarutils.so.0.0.0
src/drivers/miivii_gmsl_ros/: README.md
src/drivers/miivii_gmsl_ros/launch/: miivii_gmsl.launch
src/drivers/miivii_gmsl_ros/src/: miivii_gmsl_camera_node.cpp
src/hmi/: CMakeLists.txt  package.xml
src/launch_manager/: CMakeLists.txt  package.xml
src/localization/: CMakeLists.txt  package.xml
src/localization/rtk/: CMakeLists.txt  README.md  package.xml
src/localization/rtk/include/rtk/: gps_serial.h  rtk.h
src/localization/rtk/launch/: rtk.launch.py
src/localization/rtk/src/: gps_serial.cpp  rtk.cpp
src/map/: CMakeLists.txt  package.xml
src/ndt_mapping/: CMakeLists.txt  package.xml
src/ndt_mapping/config/: ndt_params.yaml
src/ndt_mapping/include/ndt_mapping/: ndt_mapping.h
src/ndt_mapping/launch/: ndt_mapping.launch.py
src/ndt_mapping/src/: ndt_mapping.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/lane_detection/: CMakeLists.txt  README.md  package.xml
src/perception/lane_detection/config/: lane_detector_config.yaml
src/perception/lane_detection/include/lane_detection/: lane_detection.h  ufld_detector.h
src/perception/lane_detection/include/tensorrt_base/: tensorrt_base.h  trt_inference.h
src/perception/lane_detection/launch/: lane_detection.launch.py  ufld.launch.py
src/perception/lane_detection/src/: ufld_detector.cpp  ufld_node.cpp
src/perception/obstacles_detection_lidar/: CMakeLists.txt  package.xml
src/perception/obstacles_detection_lidar/config/: obstacles_detection_lidar_config.yaml
src/perception/obstacles_detection_lidar/include/obstacles_detection_lidar/: obstacles_detection_lidar.h
src/perception/obstacles_detection_lidar/launch/: obstacles_detection_lidar.launch.py
src/perception/obstacles_detection_lidar/src/: obstacles_detection_lidar.cpp
src/planning/: CMakeLists.txt  package.xml
src/prediction/: CMakeLists.txt  package.xml
src/routing/: CMakeLists.txt  package.xml
src/transform/: CMakeLists.txt  package.xml
src/transform/config/: calibration.yaml  transform_conf_dev.yaml
src/transform/include/: camera_transform.hpp  corner_radar_transform.hpp  lidar_transform.hpp  public_define.hpp  transform_broadcast.hpp
src/transform/launch/: transform.launch.py
src/transform/src/: camera_transform.cpp  corner_radar_transform.cpp  lidar_transform.cpp  transform_broadcast.cpp  transform_coordinate.cpp
